portfolio header modified

--- a/css/styles.css
+++ b/css/styles.css
@@ -792,9 +792,9 @@ footer .social-list-svg {
 
 /* Portfolio Header */
 
-/* .portfolio-header {
+.header_portfolio {
 	border-bottom: 1px solid #ececec;
-} */
+}
 
 /* Portfolio Filter */
 
