--- a/css/styles.css
+++ b/css/styles.css
@@ -290,19 +290,19 @@ button {
 
 /* Features */
 
-.features-list {
+.features__list {
 	display: flex;
 }
 
-.features-item {
+.features__list-item {
 	width: 270px;
 }
 
-.features-item:not(:last-child) {
+.features__list-item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.features-list .title {
+.features__list-title {
 	color: var(--title-text-color);
 	font-weight: 700;
 	font-size: 14px;
@@ -312,14 +312,14 @@ button {
 	margin-bottom: 10px;
 }
 
-.features-list-svg {
+.features__list-svg {
 	display: flex;
 	margin-bottom: 30px;
 	/* justify-content: space-between;
 	align-items: center; */
 }
 
-.features-item-svg {
+.features__list-svg-item {
 	width: 270px;
 	height: 120px;
 	padding: 25px 100px;
@@ -327,11 +327,11 @@ button {
 	border-radius: 4px;
 }
 
-.features-item-svg:not(:last-child) {
+.features__list-svg-item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.features-svg {
+.features__svg {
 	width: 70px;
 	height: 70px;
 }
