--- a/css/styles.css
+++ b/css/styles.css
@@ -336,33 +336,33 @@ button {
 	height: 70px;
 }
 
-/* works */
+/* Works */
 
 .works {
 	padding-top: 0;
 }
 
-.works-list {
+.works__list {
 	display: flex;
 	flex-wrap: wrap;
 	margin: -15px;
 }
 
-.works .item {
+.works__list-item {
 	margin: 15px;
 	width: 370px;
 	text-align: center;
 	position: relative;
 }
 
-.works .text {
+.works__list-text {
 	position: absolute;
 	font-weight: 700;
 	line-height: 1.14;
 	text-transform: uppercase;
 	color: var(--primary-white-color);
 	background: rgba(47, 48, 58, 0.8);
-	width: 370px;
+	width: 100%;
 	height: 70px;
 
 	bottom: 0;
