--- a/css/styles.css
+++ b/css/styles.css
@@ -370,32 +370,32 @@ button {
 	padding-bottom: 27px;
 }
 
-/* Наша команда */
+/* Team */
 
-.staff {
+.team {
 	background-color: #f5f4fa;
 }
 
-.staff-list {
+.team__list {
 	display: flex;
 }
 
-.staff-item {
+.team__list-item {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
 	background-color: var(--primary-white-color);
 }
 
-.staff-item:not(:last-child) {
+.team__list-item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.staff-container {
+.team-container {
 	padding-top: 30px;
 	padding-bottom: 30px;
 	text-align: center;
 }
-.staff-list .name {
+.team__list-name {
 	color: var(--title-text-color);
 	font-weight: 500;
 	font-size: 16px;
@@ -404,7 +404,7 @@ button {
 	margin-bottom: 10px;
 }
 
-.staff-list .text {
+.team__list-text {
 	font-size: 16px;
 	line-height: 1.19;
 
