--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* HEADER */
+/* Header */
 
 header {
 	padding-top: 32px;
@@ -452,37 +452,36 @@ button {
 
 /* Footer */
 
-footer {
+.footer {
 	background-color: #2f303a;
 	padding-top: 60px;
 	padding-bottom: 60px;
 }
 
-footer span {
+.footer-logo {
 	color: #ffffff;
 }
 
-footer .logo {
+.footer .logo {
 	display: inline-block;
 	/* margin-right: 0; */
 	margin-bottom: 20px;
 }
 
-footer .address {
+.footer__contact-address {
 	color: var(--primary-white-color);
 	font-style: normal;
 	font-size: 14px;
 	line-height: 1.71;
-
 	margin-bottom: 9px;
 }
 
-footer .mail {
+.footer__contact-email {
 	margin-bottom: 9px;
 }
 
-footer .mail,
-footer .phone {
+.footer__contact-email,
+.footer__contact-phone {
 	color: rgba(255, 255, 255, 0.6);
 	text-decoration: none;
 	font-style: normal;
@@ -491,16 +490,16 @@ footer .phone {
 	display: block;
 }
 
-footer .container {
+.footer .container {
 	display: flex;
 	align-items: center;
 }
 
-footer .footer-contact {
+.footer__contact {
 	margin-right: 70px;
 }
 
-footer .social-list-text {
+.footer__social-text {
 	margin-bottom: 20px;
 	font-weight: 700;
 	line-height: 1.14;
@@ -508,19 +507,19 @@ footer .social-list-text {
 	color: var(--primary-white-color);
 }
 
-footer .social-list__link {
+.social-list__link {
 	background: rgba(255, 255, 255, 0.1);
 }
 
-footer .social-list__svg {
+.footer .social-list__svg {
 	fill: var(--primary-white-color);
 }
 
-.footer-subscribe {
+.footer__subscribe {
 	margin-left: auto;
 }
 
-.subscribe-title {
+.footer__subscribe-title {
 	margin-bottom: 20px;
 	font-weight: 700;
 	line-height: 1.14;
@@ -528,11 +527,11 @@ footer .social-list__svg {
 	color: var(--primary-white-color);
 }
 
-.subscribe-form {
+.footer__subscribe-form {
 	display: flex;
 }
 
-.subscribe-input {
+.footer__subscribe-input {
 	width: 358px;
 	height: 50px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
@@ -549,17 +548,17 @@ footer .social-list__svg {
 	font-family: Roboto, sans-serif;
 }
 
-.subscribe-input::placeholder {
+.footer__subscribe-input::placeholder {
 	font-size: 16px;
 	line-height: 1.25;
 	color: rgba(255, 255, 255, 0.6);
 }
 
-.subscribe-input:not(:placeholder-shown) {
+.footer__subscribe-input:not(:placeholder-shown) {
 	border-color: var(--accent-color);
 }
 
-.subscribe-send-svg {
+.footer__subscribe-svg {
 	width: 24px;
 	height: 24px;
 	fill: currentColor;
