filter bem done

--- a/css/styles.css
+++ b/css/styles.css
@@ -784,7 +784,7 @@ button {
 
 /* Portfolio Header */
 
-.header_portfolio {
+.portfolio-header {
 	border-bottom: 1px solid #ececec;
 }
 
@@ -795,17 +795,17 @@ button {
 	padding-bottom: 94px;
 }
 
-.filter-list {
+.filter__list {
 	display: flex;
 	justify-content: center;
 	margin-bottom: 50px;
 }
 
-.filter-item:not(:last-child) {
+.filter__list-item:not(:last-child) {
 	margin-right: 8px;
 }
 
-.filter-list .option {
+.filter__list-option {
 	background-color: #f5f4fa;
 	color: var(--title-text-color);
 	font-weight: 500;
@@ -821,10 +821,11 @@ button {
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-list .option:hover,
-.filter-list .option:focus {
+.filter__list-option:hover,
+.filter__list-option:focus {
 	background-color: var(--accent-color);
 	color: var(--primary-white-color);
+	cursor: pointer;
 }
 
 /* Portfolio Examples */
