--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ header {
 	align-items: center;
 }
 
-/* logo */
+/* Logo */
 
 .logo {
 	color: var(--accent-color);
@@ -245,7 +245,7 @@ header {
 	margin-top: 0;
 }
 
-/* Hero Button */
+/* Button */
 
 button {
 	font-family: inherit;
@@ -269,7 +269,7 @@ button {
 	height: 50px;
 }
 
-/* section */
+/* Section */
 
 .section {
 	padding-top: 94px;
@@ -618,7 +618,7 @@ button {
 	fill: var(--accent-color);
 }
 
-/* hidden */
+/* Hidden */
 
 .is-hidden {
 	opacity: 0;
@@ -637,7 +637,7 @@ button {
 	overflow: hidden;
 }
 
-/* end hidden */
+/* Modal */
 
 .modal-form__svg {
 	width: 18px;
@@ -814,10 +814,8 @@ button {
 	text-align: center;
 	border-style: none;
 	border-radius: 4px;
-
 	padding: 6px 22px;
 	min-width: 73px;
-
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -866,7 +864,6 @@ button {
 	color: var(--primary-white-color);
 	background-color: rgba(33, 150, 243, 0.9);
 	padding: 63px 24px;
-
 	transform: translateY(100%);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -889,7 +886,6 @@ button {
 	color: var(--primary-text-color);
 	font-size: 16px;
 	line-height: 1.88;
-
 	margin-top: 4px;
 	margin-bottom: 0;
 }
