--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -14,6 +14,7 @@
 	width: 44px;
 	height: 44px;
 	background-color: #ffffff;
+	background: rgba(255, 255, 255, 0.1);
 	border-radius: 50%;
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
