--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,6 @@
-header {
+.header {
 	padding-top: 32px;
 	padding-bottom: 32px;
-}
-
-.header .container {
-	display: flex;
-	align-items: center;
-}
-
-.navigation {
-	display: flex;
-	align-items: center;
 }
 
 /* Logo */
@@ -22,45 +12,46 @@ header {
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.2;
-
 	margin-right: 93px;
+
+	&-text {
+		color: #000000;
+	}
 }
 
-.logo-text {
-	color: #000000;
-}
+/* Navigation */
 
-/* Navigation list */
-
-.navigation__list {
+.navigation {
 	display: flex;
-}
+	align-items: center;
 
-.navigation__list-item:not(:last-child) {
-	margin-right: 50px;
-}
+	&__list {
+		display: flex;
+	}
 
-.navigation__list-link {
-	color: var(--title-text-color);
-	text-decoration: none;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+	&__list-item:not(:last-child) {
+		margin-right: 50px;
+	}
 
-.navigation__list-link:hover,
-.navigation__list-link:focus {
-	color: var(--accent-color);
-}
+	&__list-link {
+		color: var(--title-text-color);
+		text-decoration: none;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.14;
+		letter-spacing: 0.02em;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		position: relative;
 
-.navigation__list-link.current {
-	color: var(--accent-color);
-}
+		&:hover,
+		&:focus {
+			color: var(--accent-color);
+		}
 
-.navigation__list-link {
-	position: relative;
+		&.current {
+			color: var(--accent-color);
+		}
+	}
 }
 
 .navigation__list-link.current::after {
