--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,8 +3,6 @@
 	padding-bottom: 32px;
 }
 
-/* Logo */
-
 .logo {
 	color: var(--accent-color);
 	text-decoration: none;
@@ -18,8 +16,6 @@
 		color: #000000;
 	}
 }
-
-/* Navigation */
 
 .navigation {
 	display: flex;
@@ -47,66 +43,63 @@
 		&:focus {
 			color: var(--accent-color);
 		}
+	}
 
-		&.current {
-			color: var(--accent-color);
+	&__list-link.current {
+		color: var(--accent-color);
+
+		&::after {
+			content: "";
+			display: inline-block;
+			position: absolute;
+			width: 100%;
+			height: 4px;
+			bottom: -40px;
+			left: 0;
+			background: var(--accent-color);
+			border-radius: 2px;
 		}
 	}
 }
-
-.navigation__list-link.current::after {
-	content: "";
-	display: inline-block;
-	position: absolute;
-	width: 100%;
-	height: 4px;
-	bottom: -40px;
-	left: 0;
-	background: var(--accent-color);
-	border-radius: 2px;
-}
-
-/* Contacts list */
 
 .contacts__list {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-left: auto;
-}
 
-.contacts__list-item:not(:last-child) {
-	margin-right: 30px;
-}
+	&__list-item:not(:last-child) {
+		margin-right: 30px;
+	}
 
-.contacts__list-link {
-	color: var(--primary-text-color);
-	text-decoration: none;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
+	&__list-link {
+		color: var(--primary-text-color);
+		text-decoration: none;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.14;
+		letter-spacing: 0.02em;
+		display: flex;
+		align-items: center;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	display: flex;
-	align-items: center;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+		&:hover,
+		&:focus {
+			color: var(--accent-color);
+		}
+	}
 
-.contacts__list-link:hover,
-.contacts__list-link:focus {
-	color: var(--accent-color);
-}
+	&__list-svg_envelope {
+		width: 16px;
+		height: 12px;
+		fill: currentColor;
+		margin-right: 10px;
+	}
 
-.contacts__list-svg_envelope {
-	width: 16px;
-	height: 12px;
-	fill: currentColor;
-	margin-right: 10px;
-}
-
-.contacts__list-svg_phone {
-	width: 10px;
-	height: 16px;
-	fill: currentColor;
-	margin-right: 10px;
+	&__list-svg_phone {
+		width: 10px;
+		height: 16px;
+		fill: currentColor;
+		margin-right: 10px;
+	}
 }
