--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -8,4 +8,10 @@
 		display: flex;
 		align-items: center;
 	}
+
+	.hero & {
+		width: 696px;
+		padding-top: 200px;
+		padding-bottom: 200px;
+	}
 }
