--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,23 +9,17 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-}
 
-.hero .container {
-	width: 696px;
-	padding-top: 200px;
-	padding-bottom: 200px;
-}
+	&__title {
+		color: var(--primary-white-color);
+		font-weight: 900;
+		font-size: 44px;
+		line-height: 1.36;
 
-.hero__title {
-	color: var(--primary-white-color);
-	font-weight: 900;
-	font-size: 44px;
-	line-height: 1.36;
+		letter-spacing: 0.06em;
+		text-transform: uppercase;
 
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
-
-	margin-bottom: 30px;
-	margin-top: 0;
+		margin-bottom: 30px;
+		margin-top: 0;
+	}
 }
