--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,31 +1,30 @@
 .works {
 	padding-top: 0;
-}
 
-.works__list {
-	display: flex;
-	flex-wrap: wrap;
-	margin: -15px;
-}
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		margin: -15px;
+	}
 
-.works__list-item {
-	margin: 15px;
-	width: 370px;
-	text-align: center;
-	position: relative;
-}
+	&__list-item {
+		margin: 15px;
+		width: 370px;
+		text-align: center;
+		position: relative;
+	}
 
-.works__list-text {
-	position: absolute;
-	font-weight: 700;
-	line-height: 1.14;
-	text-transform: uppercase;
-	color: var(--primary-white-color);
-	background: rgba(47, 48, 58, 0.8);
-	width: 100%;
-	height: 70px;
-
-	bottom: 0;
-	padding-top: 27px;
-	padding-bottom: 27px;
+	&__list-text {
+		position: absolute;
+		font-weight: 700;
+		line-height: 1.14;
+		text-transform: uppercase;
+		color: var(--primary-white-color);
+		background: rgba(47, 48, 58, 0.8);
+		width: 100%;
+		height: 70px;
+		bottom: 0;
+		padding-top: 27px;
+		padding-bottom: 27px;
+	}
 }
