--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,38 +1,37 @@
 .team {
 	background-color: #f5f4fa;
-}
 
-.team__list {
-	display: flex;
-}
+	&__list {
+		display: flex;
+	}
 
-.team__list-item {
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 0px 0px 4px 4px;
-	background-color: var(--primary-white-color);
-}
+	&__list-item {
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+		border-radius: 0px 0px 4px 4px;
+		background-color: var(--primary-white-color);
 
-.team__list-item:not(:last-child) {
-	margin-right: 30px;
+		&:not(:last-child) {
+			margin-right: 30px;
+		}
+	}
+
+	&__list-name {
+		color: var(--title-text-color);
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 1.19;
+		margin-bottom: 10px;
+	}
+
+	&__list-text {
+		font-size: 16px;
+		line-height: 1.19;
+		margin-bottom: 16px;
+	}
 }
 
 .team-container {
 	padding-top: 30px;
 	padding-bottom: 30px;
 	text-align: center;
-}
-.team__list-name {
-	color: var(--title-text-color);
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.19;
-
-	margin-bottom: 10px;
-}
-
-.team__list-text {
-	font-size: 16px;
-	line-height: 1.19;
-
-	margin-bottom: 16px;
 }
