--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -15,12 +15,12 @@
 	border: 1px solid #afb1b8;
 	border-radius: 4px;
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients__list-link:hover,
-.clients__list-link:focus {
-	color: var(--accent-color);
-	border: 1px solid var(--accent-color);
+	&:hover,
+	&:focus {
+		color: var(--accent-color);
+		border: 1px solid var(--accent-color);
+	}
 }
 
 .clients__list-link:hover .clients__svg,
