--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,91 +11,93 @@
 	display: flex;
 	justify-content: center;
 	margin-bottom: 50px;
+
+	&__list-item:not(:last-child) {
+		margin-right: 8px;
+	}
+
+	&__list-option {
+		background-color: #f5f4fa;
+		color: var(--title-text-color);
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 1.63;
+		text-align: center;
+		border-style: none;
+		border-radius: 4px;
+		padding: 6px 22px;
+		min-width: 73px;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+		&:hover,
+		&:focus {
+			background-color: var(--accent-color);
+			color: var(--primary-white-color);
+			cursor: pointer;
+		}
+	}
 }
 
-.filter__list-item:not(:last-child) {
-	margin-right: 8px;
-}
+.examples {
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		margin: -15px;
+	}
 
-.filter__list-option {
-	background-color: #f5f4fa;
-	color: var(--title-text-color);
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.63;
-	text-align: center;
-	border-style: none;
-	border-radius: 4px;
-	padding: 6px 22px;
-	min-width: 73px;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+	&__list-item {
+		margin: 15px;
 
-.filter__list-option:hover,
-.filter__list-option:focus {
-	background-color: var(--accent-color);
-	color: var(--primary-white-color);
-	cursor: pointer;
-}
+		&:hover,
+		&:focus {
+			background: #ffffff;
+			box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+		}
+	}
 
-.examples__list {
-	display: flex;
-	flex-wrap: wrap;
-	margin: -15px;
-}
+	&__overlay {
+		position: relative;
+		overflow: hidden;
+	}
 
-.examples__list-item {
-	margin: 15px;
-}
+	&__list-description {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		font-size: 18px;
+		line-height: 1.556;
+		color: var(--primary-white-color);
+		background-color: rgba(33, 150, 243, 0.9);
+		padding: 63px 24px;
+		transform: translateY(100%);
+		transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 
-.examples__list-item:hover,
-.examples__list-item:focus {
-	background: #ffffff;
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+	&__list-name {
+		color: var(--title-text-color);
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 2;
+		letter-spacing: 0.06em;
+		margin-bottom: 0;
+	}
 
-.examples__overlay {
-	position: relative;
-	overflow: hidden;
+	&__list-text {
+		color: var(--primary-text-color);
+		font-size: 16px;
+		line-height: 1.88;
+		margin-top: 4px;
+		margin-bottom: 0;
+	}
 }
 
 .examples__list-item:hover .examples__list-description {
 	transform: translateY(0);
 }
 
-.examples__list-description {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	font-size: 18px;
-	line-height: 1.556;
-	color: var(--primary-white-color);
-	background-color: rgba(33, 150, 243, 0.9);
-	padding: 63px 24px;
-	transform: translateY(100%);
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .examples-container {
 	padding: 20px 24px;
 	border: 1px solid #eeeeee;
-}
-
-.examples__list-name {
-	color: var(--title-text-color);
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 2;
-	letter-spacing: 0.06em;
-	margin-bottom: 0;
-}
-
-.examples__list-text {
-	color: var(--primary-text-color);
-	font-size: 16px;
-	line-height: 1.88;
-	margin-top: 4px;
-	margin-bottom: 0;
 }
