--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,12 +20,12 @@
 	background-color: var(--primary-white-color);
 	padding: 0 40px;
 	padding-top: 40px;
-}
 
-.modal__close-svg {
-	width: 18px;
-	height: 18px;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	&__close-svg {
+		width: 18px;
+		height: 18px;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 }
 
 .close-modal {
@@ -42,11 +42,11 @@
 	border-radius: 50%;
 	cursor: pointer;
 	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.close-modal:hover,
-.close-modal:focus {
-	fill: var(--accent-color);
+	&:hover,
+	&:focus {
+		fill: var(--accent-color);
+	}
 }
 
 .modal-form__svg {
@@ -72,85 +72,65 @@
 .modal-form {
 	display: flex;
 	flex-direction: column;
-}
 
-.modal-form__input:focus,
-.modal-form__message:focus {
-	outline: none;
-}
+	&__input {
+		width: 100%;
+		height: 40px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		padding-left: 42px;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
 
-.modal-form__input:hover,
-.modal-form__input:focus,
-.modal-form__message:hover,
-.modal-form__message:focus {
-	border: 1px solid var(--accent-color);
-}
+	&__field {
+		position: relative;
+		margin-bottom: 28px;
+	}
 
-.modal-form__input:hover ~ .modal-form__svg {
-	fill: var(--accent-color);
-}
+	&__input-label {
+		position: absolute;
+		top: -17px;
+		left: 0;
+		font-size: 12px;
+		line-height: 1.167;
+		letter-spacing: 0.01em;
+		color: var(--primary-text-color);
+	}
 
-.modal-form__input:focus ~ .modal-form__svg {
-	fill: var(--accent-color);
-}
+	&__message {
+		width: 100%;
+		height: 120px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		resize: none;
+		padding: 12px 16px;
+		margin-bottom: 20px;
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.modal-form__message:not(:placeholder-shown) {
-	border-color: var(--accent-color);
-}
+		&::placeholder {
+			font-size: 14px;
+			line-height: 1.14;
+			font-family: Roboto;
+			letter-spacing: 0.01em;
+			color: rgba(117, 117, 117, 0.5);
+		}
 
-.modal-form__input {
-	width: 100%;
-	height: 40px;
-	border: 1px solid rgba(33, 33, 33, 0.2);
-	border-radius: 4px;
-	padding-left: 42px;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+		&:not(:placeholder-shown) {
+			border-color: var(--accent-color);
+		}
+	}
 
-.modal-form__field {
-	position: relative;
-	margin-bottom: 28px;
-}
+	&__message-label {
+		font-size: 12px;
+		line-height: 1.167;
+		letter-spacing: 0.01em;
+		color: var(--primary-text-color);
+		margin-bottom: 4px;
+	}
 
-.modal-form__input-label {
-	position: absolute;
-	top: -17px;
-	left: 0;
-	font-size: 12px;
-	line-height: 1.167;
-	letter-spacing: 0.01em;
-	color: var(--primary-text-color);
-}
-
-.modal-form__message {
-	width: 100%;
-	height: 120px;
-	border: 1px solid rgba(33, 33, 33, 0.2);
-	border-radius: 4px;
-	resize: none;
-	padding: 12px 16px;
-	margin-bottom: 20px;
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__message::placeholder {
-	font-size: 14px;
-	line-height: 1.14;
-	font-family: Roboto;
-	letter-spacing: 0.01em;
-	color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form__message-label {
-	font-size: 12px;
-	line-height: 1.167;
-	letter-spacing: 0.01em;
-	color: var(--primary-text-color);
-	margin-bottom: 4px;
-}
-
-.modal-form__accept-link {
-	color: var(--accent-color);
+	&__accept-link {
+		color: var(--accent-color);
+	}
 }
 
 .modal-svg-check {
@@ -188,4 +168,24 @@
 .modal__button {
 	width: 200px;
 	margin: 0 auto;
+}
+
+.modal-form__input:focus,
+.modal-form__message:focus {
+	outline: none;
+}
+
+.modal-form__input:hover,
+.modal-form__input:focus,
+.modal-form__message:hover,
+.modal-form__message:focus {
+	border: 1px solid var(--accent-color);
+}
+
+.modal-form__input:hover ~ .modal-form__svg {
+	fill: var(--accent-color);
+}
+
+.modal-form__input:focus ~ .modal-form__svg {
+	fill: var(--accent-color);
 }
