--- a/css/main.css
+++ b/css/main.css
@@ -732,11 +732,11 @@ body {
   margin-bottom: 50px;
 }
 
-.filter__list__list-item:not(:last-child) {
+.filter__list-item:not(:last-child) {
   margin-right: 8px;
 }
 
-.filter__list__list-option {
+.filter__list-option {
   background-color: #f5f4fa;
   color: var(--title-text-color);
   font-weight: 500;
@@ -750,7 +750,7 @@ body {
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter__list__list-option:hover, .filter__list__list-option:focus {
+.filter__list-option:hover, .filter__list-option:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   cursor: pointer;
