--- a/css/main.css
+++ b/css/main.css
@@ -197,17 +197,6 @@ body {
   fill: var(--accent-color);
 }
 
-.modal-form__svg {
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  fill: var(--title-text-color);
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal__title {
   font-weight: 700;
   font-size: 20px;
@@ -222,6 +211,17 @@ body {
   flex-direction: column;
 }
 
+.modal-form__svg {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  fill: var(--title-text-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-form__input {
   width: 100%;
   height: 40px;
@@ -229,6 +229,11 @@ body {
   border-radius: 4px;
   padding-left: 42px;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__input:hover, .modal-form__input:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
 }
 
 .modal-form__field {
@@ -255,6 +260,11 @@ body {
   padding: 12px 16px;
   margin-bottom: 20px;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__message:hover, .modal-form__message:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
 }
 
 .modal-form__message::placeholder {
@@ -316,18 +326,6 @@ body {
 .modal__button {
   width: 200px;
   margin: 0 auto;
-}
-
-.modal-form__input:focus,
-.modal-form__message:focus {
-  outline: none;
-}
-
-.modal-form__input:hover,
-.modal-form__input:focus,
-.modal-form__message:hover,
-.modal-form__message:focus {
-  border: 1px solid var(--accent-color);
 }
 
 .modal-form__input:hover ~ .modal-form__svg {
