--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -49,17 +49,6 @@
 	}
 }
 
-.modal-form__svg {
-	width: 18px;
-	height: 18px;
-	position: absolute;
-	top: 50%;
-	left: 12px;
-	transform: translateY(-50%);
-	fill: var(--title-text-color);
-	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal__title {
 	font-weight: 700;
 	font-size: 20px;
@@ -73,6 +62,17 @@
 	display: flex;
 	flex-direction: column;
 
+	&__svg {
+		width: 18px;
+		height: 18px;
+		position: absolute;
+		top: 50%;
+		left: 12px;
+		transform: translateY(-50%);
+		fill: var(--title-text-color);
+		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
+
 	&__input {
 		width: 100%;
 		height: 40px;
@@ -80,6 +80,12 @@
 		border-radius: 4px;
 		padding-left: 42px;
 		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+		&:hover,
+		&:focus {
+			outline: none;
+			border: 1px solid var(--accent-color);
+		}
 	}
 
 	&__field {
@@ -106,6 +112,12 @@
 		padding: 12px 16px;
 		margin-bottom: 20px;
 		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+		&:hover,
+		&:focus {
+			outline: none;
+			border: 1px solid var(--accent-color);
+		}
 
 		&::placeholder {
 			font-size: 14px;
@@ -168,18 +180,6 @@
 .modal__button {
 	width: 200px;
 	margin: 0 auto;
-}
-
-.modal-form__input:focus,
-.modal-form__message:focus {
-	outline: none;
-}
-
-.modal-form__input:hover,
-.modal-form__input:focus,
-.modal-form__message:hover,
-.modal-form__message:focus {
-	border: 1px solid var(--accent-color);
 }
 
 .modal-form__input:hover ~ .modal-form__svg {
