--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -27,8 +27,8 @@ img {
 }
 
 body {
-	background-color: var(--primary-white-color);
-	color: var(--primary-text-color);
+	background-color: $primary-white-color;
+	color: $primary-text-color;
 
 	font-family: Roboto, sans-serif;
 	font-size: 14px;
