--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,7 +1,7 @@
 .button {
 	font-family: inherit;
-	background-color: var(--accent-color);
-	color: var(--primary-white-color);
+	background-color: $accent-color;
+	color: $primary-white-color;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
