--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -12,7 +12,7 @@
 	}
 
 	&__list-title {
-		color: var(--title-text-color);
+		color: $title-text-color;
 		font-weight: 700;
 		font-size: 14px;
 		line-height: 1.14;
