--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,7 +11,7 @@
 	background-position: center;
 
 	&__title {
-		color: var(--primary-white-color);
+		color: $primary-white-color;
 		font-weight: 900;
 		font-size: 44px;
 		line-height: 1.36;
