--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -8,7 +8,7 @@
 	&__list-item {
 		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 		border-radius: 0px 0px 4px 4px;
-		background-color: var(--primary-white-color);
+		background-color: $primary-white-color;
 
 		&:not(:last-child) {
 			margin-right: 30px;
@@ -16,7 +16,7 @@
 	}
 
 	&__list-name {
-		color: var(--title-text-color);
+		color: $title-text-color;
 		font-weight: 500;
 		font-size: 16px;
 		line-height: 1.19;
