--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,3 @@
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-}
-
 *,
 *::before,
 *::after {
@@ -34,8 +27,8 @@ img {
 }
 
 body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
+  background-color: #ffffff;
+  color: #757575;
   font-family: Roboto, sans-serif;
   font-size: 14px;
   line-height: 1.71;
@@ -85,8 +78,8 @@ body {
 
 .button {
   font-family: inherit;
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  background-color: #2196f3;
+  color: #ffffff;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -123,7 +116,7 @@ body {
 }
 
 .social-list__link:hover, .social-list__link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .social-list__svg {
@@ -135,11 +128,11 @@ body {
 
 .social-list__link:hover .social-list__svg,
 .social-list__link:focus .social-list__svg {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .section-title {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -166,7 +159,7 @@ body {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   padding: 0 40px;
   padding-top: 40px;
 }
@@ -194,7 +187,7 @@ body {
 }
 
 .close-modal:hover, .close-modal:focus {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .modal__title {
@@ -202,7 +195,7 @@ body {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 30px;
 }
 
@@ -218,7 +211,7 @@ body {
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
-  fill: var(--title-text-color);
+  fill: #212121;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -233,7 +226,7 @@ body {
 
 .modal-form__input:hover, .modal-form__input:focus {
   outline: none;
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .modal-form__field {
@@ -248,7 +241,7 @@ body {
   font-size: 12px;
   line-height: 1.167;
   letter-spacing: 0.01em;
-  color: var(--primary-text-color);
+  color: #757575;
 }
 
 .modal-form__message {
@@ -264,7 +257,7 @@ body {
 
 .modal-form__message:hover, .modal-form__message:focus {
   outline: none;
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .modal-form__message::placeholder {
@@ -276,19 +269,19 @@ body {
 }
 
 .modal-form__message:not(:placeholder-shown) {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
 }
 
 .modal-form__message-label {
   font-size: 12px;
   line-height: 1.167;
   letter-spacing: 0.01em;
-  color: var(--primary-text-color);
+  color: #757575;
   margin-bottom: 4px;
 }
 
 .modal-form__accept-link {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .modal-svg-check {
@@ -296,7 +289,7 @@ body {
   width: 16px;
   height: 16px;
   margin-right: 6px;
-  border: 1px solid var(--title-text-color);
+  border: 1px solid #212121;
   border-radius: 2px;
   cursor: pointer;
   background-size: cover;
@@ -319,7 +312,7 @@ body {
   content: "";
   width: 16px;
   height: 16px;
-  border: 1px solid var(--title-text-color);
+  border: 1px solid #212121;
   margin-right: 7px;
 }
 
@@ -329,11 +322,11 @@ body {
 }
 
 .modal-form__input:hover ~ .modal-form__svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .modal-form__input:focus ~ .modal-form__svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .header {
@@ -342,7 +335,7 @@ body {
 }
 
 .logo {
-  color: var(--accent-color);
+  color: #2196f3;
   text-decoration: none;
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -369,7 +362,7 @@ body {
 }
 
 .navigation__list-link {
-  color: var(--title-text-color);
+  color: #212121;
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -380,11 +373,11 @@ body {
 }
 
 .navigation__list-link:hover, .navigation__list-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .navigation__list-link.current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .navigation__list-link.current::after {
@@ -395,7 +388,7 @@ body {
   height: 4px;
   bottom: -40px;
   left: 0;
-  background: var(--accent-color);
+  background: #2196f3;
   border-radius: 2px;
 }
 
@@ -411,7 +404,7 @@ body {
 }
 
 .contacts__list-link {
-  color: var(--primary-text-color);
+  color: #757575;
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -423,7 +416,7 @@ body {
 }
 
 .contacts__list-link:hover, .contacts__list-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .contacts__list-svg_envelope {
@@ -454,7 +447,7 @@ body {
 }
 
 .hero__title {
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -477,7 +470,7 @@ body {
 }
 
 .features__list-title {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -530,7 +523,7 @@ body {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
   background: rgba(47, 48, 58, 0.8);
   width: 100%;
   height: 70px;
@@ -550,7 +543,7 @@ body {
 .team__list-item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
 }
 
 .team__list-item:not(:last-child) {
@@ -558,7 +551,7 @@ body {
 }
 
 .team__list-name {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -597,8 +590,8 @@ body {
 }
 
 .clients__list-link:hover, .clients__list-link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  color: #2196f3;
+  border: 1px solid #2196f3;
 }
 
 .clients__svg {
@@ -609,7 +602,7 @@ body {
 
 .clients__list-link:hover .clients__svg,
 .clients__list-link:focus .clients__svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .footer {
@@ -624,7 +617,7 @@ body {
 }
 
 .footer__contact-address {
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -653,11 +646,11 @@ body {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .footer .social-list__svg {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .footer__subscribe {
@@ -669,7 +662,7 @@ body {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .footer__subscribe-input {
@@ -696,7 +689,7 @@ body {
 }
 
 .footer__subscribe-input:not(:placeholder-shown) {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
 }
 
 .footer__subscribe-form {
@@ -735,7 +728,7 @@ body {
 
 .filter__list-option {
   background-color: #f5f4fa;
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -748,8 +741,8 @@ body {
 }
 
 .filter__list-option:hover, .filter__list-option:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  background-color: #2196f3;
+  color: #ffffff;
   cursor: pointer;
 }
 
@@ -781,7 +774,7 @@ body {
   height: 100%;
   font-size: 18px;
   line-height: 1.556;
-  color: var(--primary-white-color);
+  color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   padding: 63px 24px;
   transform: translateY(100%);
@@ -789,7 +782,7 @@ body {
 }
 
 .examples__list-name {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -798,7 +791,7 @@ body {
 }
 
 .examples__list-text {
-  color: var(--primary-text-color);
+  color: #757575;
   font-size: 16px;
   line-height: 1.88;
   margin-top: 4px;
