--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,7 +17,7 @@
 
 	width: 528px;
 	height: 581px;
-	background-color: var(--primary-white-color);
+	background-color: $primary-white-color;
 	padding: 0 40px;
 	padding-top: 40px;
 
@@ -45,7 +45,7 @@
 
 	&:hover,
 	&:focus {
-		fill: var(--accent-color);
+		fill: $accent-color;
 	}
 }
 
@@ -54,7 +54,7 @@
 	font-size: 20px;
 	line-height: 1.15;
 	text-align: center;
-	color: var(--title-text-color);
+	color: $title-text-color;
 	margin-bottom: 30px;
 }
 
@@ -69,7 +69,7 @@
 		top: 50%;
 		left: 12px;
 		transform: translateY(-50%);
-		fill: var(--title-text-color);
+		fill: $title-text-color;
 		transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 
@@ -84,7 +84,7 @@
 		&:hover,
 		&:focus {
 			outline: none;
-			border: 1px solid var(--accent-color);
+			border: 1px solid $accent-color;
 		}
 	}
 
@@ -100,7 +100,7 @@
 		font-size: 12px;
 		line-height: 1.167;
 		letter-spacing: 0.01em;
-		color: var(--primary-text-color);
+		color: $primary-text-color;
 	}
 
 	&__message {
@@ -116,7 +116,7 @@
 		&:hover,
 		&:focus {
 			outline: none;
-			border: 1px solid var(--accent-color);
+			border: 1px solid $accent-color;
 		}
 
 		&::placeholder {
@@ -128,7 +128,7 @@
 		}
 
 		&:not(:placeholder-shown) {
-			border-color: var(--accent-color);
+			border-color: $accent-color;
 		}
 	}
 
@@ -136,12 +136,12 @@
 		font-size: 12px;
 		line-height: 1.167;
 		letter-spacing: 0.01em;
-		color: var(--primary-text-color);
+		color: $primary-text-color;
 		margin-bottom: 4px;
 	}
 
 	&__accept-link {
-		color: var(--accent-color);
+		color: $accent-color;
 	}
 }
 
@@ -150,7 +150,7 @@
 	width: 16px;
 	height: 16px;
 	margin-right: 6px;
-	border: 1px solid var(--title-text-color);
+	border: 1px solid $title-text-color;
 	border-radius: 2px;
 	cursor: pointer;
 	background-size: cover;
@@ -173,7 +173,7 @@
 	content: "";
 	width: 16px;
 	height: 16px;
-	border: 1px solid var(--title-text-color);
+	border: 1px solid $title-text-color;
 	margin-right: 7px;
 }
 
@@ -183,9 +183,9 @@
 }
 
 .modal-form__input:hover ~ .modal-form__svg {
-	fill: var(--accent-color);
+	fill: $accent-color;
 }
 
 .modal-form__input:focus ~ .modal-form__svg {
-	fill: var(--accent-color);
+	fill: $accent-color;
 }
