--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,7 +9,7 @@
 	}
 
 	&__contact-address {
-		color: var(--primary-white-color);
+		color: $primary-white-color;
 		font-style: normal;
 		font-size: 14px;
 		line-height: 1.71;
@@ -39,11 +39,11 @@
 		font-weight: 700;
 		line-height: 1.14;
 		text-transform: uppercase;
-		color: var(--primary-white-color);
+		color: $primary-white-color;
 	}
 
 	& .social-list__svg {
-		fill: var(--primary-white-color);
+		fill: $primary-white-color;
 	}
 
 	&__subscribe {
@@ -55,7 +55,7 @@
 		font-weight: 700;
 		line-height: 1.14;
 		text-transform: uppercase;
-		color: var(--primary-white-color);
+		color: $primary-white-color;
 	}
 
 	&__subscribe-input {
@@ -81,7 +81,7 @@
 		}
 
 		&:not(:placeholder-shown) {
-			border-color: var(--accent-color);
+			border-color: $accent-color;
 		}
 	}
 
