--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -19,7 +19,7 @@
 		font-weight: 700;
 		line-height: 1.14;
 		text-transform: uppercase;
-		color: var(--primary-white-color);
+		color: $primary-white-color;
 		background: rgba(47, 48, 58, 0.8);
 		width: 100%;
 		height: 70px;
