--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,4 @@
-:root {
-	--primary-text-color: #757575;
-	--title-text-color: #212121;
-	--accent-color: #2196f3;
-	--primary-white-color: #ffffff;
-}
+$primary-text-color: #757575;
+$title-text-color: #212121;
+$accent-color: #2196f3;
+$primary-white-color: #ffffff;
